--- a/Auftragsmanagement-System/MainWindow.xaml
+++ b/Auftragsmanagement-System/MainWindow.xaml
@@ -1,9 +1,9 @@
 ﻿<Window x:Class="Auftragsmanagement_System.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="350" Width="525">
+        Title="MainWindow" Height="350" Width="630">
     <Grid>
-        <ContentControl Content="ContentControl" HorizontalAlignment="Left" Margin="330,0,0,0" VerticalAlignment="Top" Height="231" Width="187"/>
+        <ContentControl Name="contentView" Content="ContentControl" Margin="330,0,0,10"/>
         <Button Content="Button" HorizontalAlignment="Left" Margin="10,19,0,0" VerticalAlignment="Top" Width="75"/>
         <TextBlock Name="textBox" HorizontalAlignment="Left" Margin="10,93,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" Height="183" Width="230"/>
     </Grid>
