--- a/Auftragsmanagement-System/Mitarbeiterverwaltung/View/MitarbeiterverwaltungView.xaml
+++ b/Auftragsmanagement-System/Mitarbeiterverwaltung/View/MitarbeiterverwaltungView.xaml
@@ -1,12 +1,11 @@
-﻿<UserControl x:Class="Auftragsmanagement_System.ViewModels.UserControl1"
+﻿<UserControl x:Class="Auftragsmanagement_System.Mitarbeiterverwaltung.View.MitarbeiterverwaltungView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300">
+             mc:Ignorable="d" Height="341" Width="480">
     <Grid>
-        <Button Content="Button" HorizontalAlignment="Left" Margin="97,98,0,0" VerticalAlignment="Top" Width="75"/>
+        <DataGrid HorizontalAlignment="Left" ItemsSource="{Binding Models}" VerticalAlignment="Top" Height="341" Width="311"/>
 
     </Grid>
 </UserControl>
