--- a/Auftragsmanagement-System/Views/Reporting/View/ReportingView.xaml
+++ b/Auftragsmanagement-System/Views/Reporting/View/ReportingView.xaml
@@ -4,14 +4,31 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              mc:Ignorable="d" Height="314" Width="325">
-    <Grid>
+    <Grid Margin="0,0,-179,0">
         <TabControl HorizontalAlignment="Left" Height="303" Margin="6" VerticalAlignment="Top" Width="311">
             <TabItem Header="Beste Mitarbeiter">
                 <Grid Background="#FFE5E5E5">
-                    <DataGrid ItemsSource="{Binding TopMitarbeiter}" Margin="6"/>
+                    <DataGrid ItemsSource="{Binding TopMitarbeiter}" Margin="6" AutoGenerateColumns="False">
+                    <DataGrid.Columns>
+                            <DataGridTemplateColumn Header="Name" Width="SizeToCells" IsReadOnly="True">
+                                <DataGridTemplateColumn.CellTemplate>
+                                    <DataTemplate>
+                                        <TextBlock Text="{Binding Path=ToCount.Firstname}" />
+                                    </DataTemplate>
+                                </DataGridTemplateColumn.CellTemplate>
+                            </DataGridTemplateColumn>
+                            <DataGridTemplateColumn Header="Erzielter Umsatz" Width="SizeToCells" IsReadOnly="True">
+                                <DataGridTemplateColumn.CellTemplate>
+                                    <DataTemplate>
+                                        <TextBlock Text="{Binding Path=Count}" />
+                                    </DataTemplate>
+                                </DataGridTemplateColumn.CellTemplate>
+                            </DataGridTemplateColumn>
+                        </DataGrid.Columns>
+                    </DataGrid>
                 </Grid>
             </TabItem>
-            <TabItem Header="TabItem" RenderTransformOrigin="0.5,0.5">
+            <TabItem Header="Beste Artikel" RenderTransformOrigin="0.5,0.5">
                 <TabItem.RenderTransform>
                     <TransformGroup>
                         <ScaleTransform/>
@@ -24,7 +41,27 @@
                     <DataGrid ItemsSource="{Binding TopArtikel}" Margin="6"/>
                 </Grid>
             </TabItem>
+            <TabItem Header="Beste Kunden" RenderTransformOrigin="0.5,0.5">
+                <TabItem.RenderTransform>
+                    <TransformGroup>
+                        <ScaleTransform/>
+                        <SkewTransform/>
+                        <RotateTransform Angle="0"/>
+                        <TranslateTransform/>
+                    </TransformGroup>
+                </TabItem.RenderTransform>
+                <Grid Background="#FFE5E5E5">
+                    <DataGrid ItemsSource="{Binding TopKunden}" Margin="6"/>
+                </Grid>
+            </TabItem>
         </TabControl>
+        
+        
+        <Label Content="Datum von:" HorizontalAlignment="Left" Margin="345,15,0,0" VerticalAlignment="Top"/>
+        <DatePicker DisplayDate="{Binding Von}" HorizontalAlignment="Left" Margin="344,41,0,0" VerticalAlignment="Top"/>
+        <Label Content="Datum bis:" HorizontalAlignment="Left" Margin="345,65,0,0" VerticalAlignment="Top"/>
+        <DatePicker DisplayDate="{Binding Bis}" HorizontalAlignment="Left" Margin="344,91,0,0" VerticalAlignment="Top"/>
+        <Button Command="{Binding AktualisiereReporting}" Content="Generiere Auswertung" HorizontalAlignment="Left" Margin="343,268,0,0" VerticalAlignment="Top" Width="145" Height="31"/>
 
     </Grid>
 </UserControl>
