--- a/Auftragsmanagement-System/Views/MainWindow/View/MainWindowView.xaml
+++ b/Auftragsmanagement-System/Views/MainWindow/View/MainWindowView.xaml
@@ -5,8 +5,9 @@
     <Grid>
         <ContentControl Content="{Binding Content, Mode=TwoWay}" Margin="455,0,0,10"/>
         <ContentControl Content="{Binding ActionBar}" Margin="7,8,399,0" Height="386" VerticalAlignment="Top"/>
-        <Button Command="{Binding ZeigeReporting}" Content="Report" HorizontalAlignment="Left" Height="48" Margin="32,456,0,0" VerticalAlignment="Top" Width="79"/>
-        <Button Command="{Binding ZeigeMitarbeiterverwaltung}" Content="Mitarbeiter" HorizontalAlignment="Left" Height="48" Margin="220,459,0,0" VerticalAlignment="Top" Width="80"/>
+        <Button Command="{Binding ZeigeReporting}" Content="Report" HorizontalAlignment="Left" Height="48" Margin="35,459,0,0" VerticalAlignment="Top" Width="79"/>
+        <Button Command="{Binding ZeigeMitarbeiterverwaltung}" Content="Mitarbeiter" HorizontalAlignment="Left" Height="48" Margin="218,458,0,0" VerticalAlignment="Top" Width="80"/>
         <Button Command="{Binding ZeigeArtikelverwaltung}" Content="Artikel" HorizontalAlignment="Left" Height="48" Margin="128,460,0,0" VerticalAlignment="Top" Width="78"/>
+        <Button Command="{Binding ZeigeAuftragsverwaltung}" Content="Aufträge" HorizontalAlignment="Left" Height="48" Margin="312,458,0,0" VerticalAlignment="Top" Width="80"/>
     </Grid>
 </Window>
