--- a/Auftragsmanagement-System/Views/Auftragsverwaltung/View/AuftragsverwaltungView.xaml
+++ b/Auftragsmanagement-System/Views/Auftragsverwaltung/View/AuftragsverwaltungView.xaml
@@ -5,7 +5,10 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
-    <Grid>
-            
+    <Grid Margin="0,0,-418,-117">
+        <DataGrid ItemsSource="{Binding Orders}" SelectedItem="{Binding SelectedOrder, Mode=TwoWay}" HorizontalAlignment="Left" Width="282" Margin="0,0,0,0"/>
+        <DataGrid ItemsSource="{Binding Path=SelectedOrder.OrderLines}" HorizontalAlignment="Left" Width="282" Margin="282,0,0,0"/>
+        <Label Content="{Binding SelectedOrder.Order.Description}" HorizontalAlignment="Left" Margin="606,122,0,0" VerticalAlignment="Top"/>
+
     </Grid>
 </UserControl>
