--- a/Auftragsmanagement-System/Views/MainWindow/View/MainWindowView.xaml
+++ b/Auftragsmanagement-System/Views/MainWindow/View/MainWindowView.xaml
@@ -1,13 +1,27 @@
 ﻿<Window x:Class="Auftragsmanagement_System.MainWindow.View.MainWindowView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindowView" Height="600.746" Width="963.604">
+        Title="MainWindowView" Height="485" Width="800">
     <Grid>
-        <ContentControl Content="{Binding Content, Mode=TwoWay}" Margin="455,0,0,10"/>
-        <ContentControl Content="{Binding ActionBar}" Margin="7,8,399,0" Height="386" VerticalAlignment="Top"/>
-        <Button Command="{Binding ZeigeReporting}" Content="Report" HorizontalAlignment="Left" Height="48" Margin="35,459,0,0" VerticalAlignment="Top" Width="79"/>
-        <Button Command="{Binding ZeigeMitarbeiterverwaltung}" Content="Mitarbeiter" HorizontalAlignment="Left" Height="48" Margin="218,458,0,0" VerticalAlignment="Top" Width="80"/>
-        <Button Command="{Binding ZeigeArtikelverwaltung}" Content="Artikel" HorizontalAlignment="Left" Height="48" Margin="128,460,0,0" VerticalAlignment="Top" Width="78"/>
-        <Button Command="{Binding ZeigeAuftragsverwaltung}" Content="Aufträge" HorizontalAlignment="Left" Height="48" Margin="312,458,0,0" VerticalAlignment="Top" Width="80"/>
-    </Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="50"/>
+            <RowDefinition Height="400*"/>
+            <RowDefinition Height="30"/>
+        </Grid.RowDefinitions>
+        
+        <ContentControl Content="{Binding ActionBar}" Margin="0,0,0,0" Grid.Row="0"/>
+        <ContentControl Content="{Binding Content, Mode=TwoWay}" Margin="10,0,0,0" Grid.Row="1"/>
+        <Grid Grid.Row="2" Margin="0">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+            </Grid.ColumnDefinitions>
+            <Button Command="{Binding ZeigeReporting}" Content="Report" Margin="10,0,10,5" Grid.Column="0"/>
+            <Button Command="{Binding ZeigeMitarbeiterverwaltung}" Content="Mitarbeiter" Margin="10,0,10,5" Grid.Column="1"/>
+            <Button Command="{Binding ZeigeArtikelverwaltung}" Content="Artikel" Margin="10,0,10,5" Grid.Column="2"/>
+            <Button Command="{Binding ZeigeAuftragsverwaltung}" Content="Aufträge" Margin="10,0,10,5" Grid.Column="3"/>
+        </Grid>
+        </Grid>
 </Window>
