--- a/Auftragsmanagement-System/Views/Reporting/View/ReportingView.xaml
+++ b/Auftragsmanagement-System/Views/Reporting/View/ReportingView.xaml
@@ -3,9 +3,10 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             mc:Ignorable="d" Height="314" Width="325">
-    <Grid Margin="0,0,-179,0">
-        <TabControl HorizontalAlignment="Left" Height="303" Margin="6" VerticalAlignment="Top" Width="311">
+             mc:Ignorable="d" Height="350" Width="750">
+    
+    <Grid Margin="0,0,0,0">
+        <TabControl  Margin="6,0,172,11">
             <TabItem Header="Beste Mitarbeiter">
                 <Grid Background="#FFE5E5E5">
                     <DataGrid ItemsSource="{Binding TopMitarbeiter}" Margin="6" AutoGenerateColumns="False">
@@ -57,11 +58,11 @@
         </TabControl>
         
         
-        <Label Content="Datum von:" HorizontalAlignment="Left" Margin="345,15,0,0" VerticalAlignment="Top"/>
-        <DatePicker DisplayDate="{Binding Von}" HorizontalAlignment="Left" Margin="344,41,0,0" VerticalAlignment="Top"/>
-        <Label Content="Datum bis:" HorizontalAlignment="Left" Margin="345,65,0,0" VerticalAlignment="Top"/>
-        <DatePicker DisplayDate="{Binding Bis}" HorizontalAlignment="Left" Margin="344,91,0,0" VerticalAlignment="Top"/>
-        <Button Command="{Binding AktualisiereReporting}" Content="Generiere Auswertung" HorizontalAlignment="Left" Margin="343,268,0,0" VerticalAlignment="Top" Width="145" Height="31"/>
+        <Label Content="Datum von:" HorizontalAlignment="Left" Margin="591,28,0,0" VerticalAlignment="Top"/>
+        <DatePicker DisplayDate="{Binding Von}" HorizontalAlignment="Left" Margin="590,54,0,0" VerticalAlignment="Top"/>
+        <Label Content="Datum bis:" HorizontalAlignment="Left" Margin="591,78,0,0" VerticalAlignment="Top"/>
+        <DatePicker DisplayDate="{Binding Bis}" HorizontalAlignment="Left" Margin="590,104,0,0" VerticalAlignment="Top"/>
+        <Button Command="{Binding AktualisiereReporting}" Content="Generiere Auswertung" HorizontalAlignment="Left" Margin="589,281,0,0" VerticalAlignment="Top" Width="145" Height="31"/>
 
     </Grid>
 </UserControl>
