--- a/Auftragsmanagement-System/Views/Mitarbeiterverwaltung/View/MitarbeiterverwaltungView.xaml
+++ b/Auftragsmanagement-System/Views/Mitarbeiterverwaltung/View/MitarbeiterverwaltungView.xaml
@@ -2,19 +2,31 @@
 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             mc:Ignorable="d" Height="400" Width="800">
-    
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:System="clr-namespace:System;assembly=mscorlib"
+             xmlns:models="clr-namespace:Auftragsmanagement_System.Models"
+             mc:Ignorable="d" 
+             d:DesignHeight="400" d:DesignWidth="750">
+    <UserControl.Resources>
+        <ObjectDataProvider x:Key="TitleEnum" MethodName="GetValues"
+                            ObjectType="{x:Type System:Enum}">
+            <ObjectDataProvider.MethodParameters>
+                <x:Type TypeName="models:Title"/>
+            </ObjectDataProvider.MethodParameters>
+        </ObjectDataProvider>
+    </UserControl.Resources>
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition />
-            <ColumnDefinition />
+            <ColumnDefinition/>
+            <ColumnDefinition Width="350" />
 
         </Grid.ColumnDefinitions>
 
         <Grid>
             
-            <DataGrid Margin="0" IsReadOnly="True" SelectedItem="{Binding SelectedModel}" ItemsSource="{Binding Models}" />
+            <DataGrid Margin="0" IsReadOnly="True" SelectedItem="{Binding SelectedModel}" ItemsSource="{Binding Models}" AutoGenerateColumns="True">
+                
+            </DataGrid>
 
     </Grid>
         <Grid Grid.Column="1">
@@ -23,23 +35,23 @@ xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                 <ColumnDefinition Width="251*" />
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
-                <RowDefinition />
-                <RowDefinition/>
-                <RowDefinition />
-                <RowDefinition/>
-                <RowDefinition />
-                <RowDefinition />
-                <RowDefinition/>
-                <RowDefinition />
-                <RowDefinition/>
-                <RowDefinition />
+                <RowDefinition Height="35"/>
+                <RowDefinition Height="35"/>
+                <RowDefinition Height="35"/>
+                <RowDefinition Height="35"/>
+                <RowDefinition Height="35"/>
+                <RowDefinition Height="35"/>
+                <RowDefinition Height="35"/>
+                <RowDefinition Height="35"/>
+                <RowDefinition Height="35"/>
+                <RowDefinition Height="35"/>
 
             </Grid.RowDefinitions>
 
             <TextBox Text="{Binding SelectedModel.EmployeeNumber}" Margin="5,5,5,5" Grid.Row="0" Grid.Column="1"/>
             <Label Margin="0,5,5,0" Grid.Row="0" Grid.Column="0" Content="Mitarbeiter-Nr." />
-            
-            <TextBox Text="{Binding SelectedModel.Titel}" Margin="5,5,5,5" Grid.Row="1" Grid.Column="1"/>
+
+            <ComboBox ItemsSource="{Binding Source={StaticResource TitleEnum}}" SelectedItem="{Binding Path=SelectedModel.Title}" Margin="5,5,5,5" Grid.Row="1" Grid.Column="1"/>
             <Label Margin="0,5,5,0" Grid.Row="1" Grid.Column="0" Content="Titel" />
             
             <TextBox Text="{Binding SelectedModel.Firstname}" Margin="5,5,5,5" Grid.Row="2" Grid.Column="1"/>
@@ -48,9 +60,12 @@ xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
             <TextBox Text="{Binding SelectedModel.Lastname}" Margin="5,5,5,5" Grid.Row="3" Grid.Column="1"/>
             <Label Margin="0,5,5,0" Grid.Row="3" Grid.Column="0" Content="Nachname" />
 
-            <TextBox Text="{Binding SelectedModel.IsActive}" Margin="5,5,5,5" Grid.Row="4" Grid.Column="1"/>
+            <CheckBox IsChecked="{Binding SelectedModel.IsActive}" Margin="10,12,226,10" Grid.Row="4" Grid.Column="1"/>
             <Label Margin="0,5,5,0" Grid.Row="4" Grid.Column="0" Content="Im Einsatz" />
-            
+
+            <TextBox Text="{Binding SelectedModel.Area}" Margin="150,5,5,5" Grid.Row="4" Grid.Column="1"/>
+            <Label Margin="80,5,120,0" Grid.Row="4" Grid.Column="1" Content="Bereich" />
+
             <TextBox Text="{Binding SelectedModel.Address.Street}" Margin="5,5,5,5" Grid.Row="5" Grid.Column="1"/>
             <Label Margin="0,5,5,0" Grid.Row="5" Grid.Column="0" Content="Straße" />
 
