--- a/Auftragsmanagement-System/Views/Kundenverwaltung/View/KundenverwaltungView.xaml
+++ b/Auftragsmanagement-System/Views/Kundenverwaltung/View/KundenverwaltungView.xaml
@@ -2,21 +2,55 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:System="clr-namespace:System;assembly=mscorlib"
+             xmlns:models="clr-namespace:Auftragsmanagement_System.Models"
              mc:Ignorable="d" 
              d:DesignHeight="400" d:DesignWidth="750">
+    <UserControl.Resources>
+        <ObjectDataProvider x:Key="TitleEnum" MethodName="GetValues"
+                            ObjectType="{x:Type System:Enum}">
+            <ObjectDataProvider.MethodParameters>
+                <x:Type TypeName="models:Title"/>
+            </ObjectDataProvider.MethodParameters>
+        </ObjectDataProvider>
+    </UserControl.Resources>
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition />
+            <ColumnDefinition/>
             <ColumnDefinition Width="350" />
 
         </Grid.ColumnDefinitions>
 
         <Grid>
 
-            <DataGrid Margin="0" IsReadOnly="True" SelectedItem="{Binding SelectedModel}" ItemsSource="{Binding Models}" />
-
+            <DataGrid Margin="0" IsReadOnly="True" SelectedItem="{Binding SelectedModel}" ItemsSource="{Binding Models}" AutoGenerateColumns="False">
+                <DataGrid.Columns>
+                    <DataGridTemplateColumn Header="Kundennummer" Width="*" IsReadOnly="True">
+                        <DataGridTemplateColumn.CellTemplate>
+                            <DataTemplate>
+                                <TextBlock Text="{Binding Path=CustomerNumber}" />
+                            </DataTemplate>
+                        </DataGridTemplateColumn.CellTemplate>
+                    </DataGridTemplateColumn>
+                    <DataGridTemplateColumn Header="Vorname" Width="*" IsReadOnly="True">
+                        <DataGridTemplateColumn.CellTemplate>
+                            <DataTemplate>
+                                <TextBlock Text="{Binding Path=Firstname}" />
+                            </DataTemplate>
+                        </DataGridTemplateColumn.CellTemplate>
+                    </DataGridTemplateColumn>
+                    <DataGridTemplateColumn Header="Nachname" Width="*" IsReadOnly="True">
+                        <DataGridTemplateColumn.CellTemplate>
+                            <DataTemplate>
+                                <TextBlock Text="{Binding Path=Name}" />
+                            </DataTemplate>
+                        </DataGridTemplateColumn.CellTemplate>
+                    </DataGridTemplateColumn>
+                </DataGrid.Columns>
+            </DataGrid>
         </Grid>
+
         <Grid Grid.Column="1">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="100*" />
@@ -36,20 +70,20 @@
 
             </Grid.RowDefinitions>
 
-            <TextBox Text="{Binding SelectedModel.EmployeeNumber}" Margin="5,5,5,5" Grid.Row="0" Grid.Column="1"/>
-            <Label Margin="0,5,5,0" Grid.Row="0" Grid.Column="0" Content="Mitarbeiter-Nr." />
+            <TextBox Text="{Binding SelectedModel.CustomerNumber}" Margin="5,5,5,5" Grid.Row="0" Grid.Column="1"/>
+            <Label Margin="0,5,5,0" Grid.Row="0" Grid.Column="0" Content="Kunden-Nr." />
 
-            <TextBox Text="{Binding SelectedModel.Titel}" Margin="5,5,5,5" Grid.Row="1" Grid.Column="1"/>
+            <ComboBox ItemsSource="{Binding Source={StaticResource TitleEnum}}" SelectedItem="{Binding Path=SelectedModel.Title}" Margin="5,5,5,5" Grid.Row="1" Grid.Column="1"/>
             <Label Margin="0,5,5,0" Grid.Row="1" Grid.Column="0" Content="Titel" />
 
             <TextBox Text="{Binding SelectedModel.Firstname}" Margin="5,5,5,5" Grid.Row="2" Grid.Column="1"/>
             <Label Margin="0,5,5,0" Grid.Row="2" Grid.Column="0" Content="Vorname" />
 
-            <TextBox Text="{Binding SelectedModel.Lastname}" Margin="5,5,5,5" Grid.Row="3" Grid.Column="1"/>
+            <TextBox Text="{Binding SelectedModel.Name}" Margin="5,5,5,5" Grid.Row="3" Grid.Column="1"/>
             <Label Margin="0,5,5,0" Grid.Row="3" Grid.Column="0" Content="Nachname" />
 
-            <CheckBox IsChecked="{Binding SelectedModel.IsActive}" Margin="10,12,10,10" Grid.Row="4" Grid.Column="1"/>
-            <Label Margin="0,5,5,0" Grid.Row="4" Grid.Column="0" Content="Aktiv" />
+            <CheckBox IsChecked="{Binding SelectedModel.IsActive}" Margin="10,12,226,10" Grid.Row="4" Grid.Column="1"/>
+            <Label Margin="0,5,5,0" Grid.Row="4" Grid.Column="0" Content="Im Einsatz" />
 
             <TextBox Text="{Binding SelectedModel.Address.Street}" Margin="5,5,5,5" Grid.Row="5" Grid.Column="1"/>
             <Label Margin="0,5,5,0" Grid.Row="5" Grid.Column="0" Content="Straße" />
