--- a/Auftragsmanagement-System/Views/Mitarbeiterverwaltung/View/MitarbeiterverwaltungView.xaml
+++ b/Auftragsmanagement-System/Views/Mitarbeiterverwaltung/View/MitarbeiterverwaltungView.xaml
@@ -67,6 +67,7 @@ xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                 <RowDefinition Height="35"/>
                 <RowDefinition Height="35"/>
                 <RowDefinition Height="35"/>
+                <RowDefinition Height="35"/>
 
             </Grid.RowDefinitions>
 
@@ -103,6 +104,8 @@ xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
             <TextBox Text="{Binding SelectedModel.Address.City.Country.Name}" Margin="5,5,5,5" Grid.Row="9" Grid.Column="1"/>
             <Label Margin="0,5,5,0" Grid.Row="9" Grid.Column="0" Content="Land" />
 
+            <Label Margin="0,5,5,0" Grid.Row="10" Grid.Column="0" Content="{Binding Fehlermeldung}" Grid.ColumnSpan="2" />
+            
         </Grid>
    </Grid>
 </UserControl>
