--- a/Auftragsmanagement-System/Views/ActionBar/View/ActionBarView.xaml
+++ b/Auftragsmanagement-System/Views/ActionBar/View/ActionBarView.xaml
@@ -5,10 +5,16 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              mc:Ignorable="d" Height="50" Width="557">
     <Grid>
-        <Button Visibility="{Binding Command1Show}" Content="{Binding Command1Text}" Command="{Binding Command1}" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="75" Height="25"/>
-        <Button Visibility="{Binding Command2Show}" Content="{Binding Command2Text}" Command="{Binding Command2}" HorizontalAlignment="Left" Margin="90,10,0,0" VerticalAlignment="Top" Width="75" Height="25"/>
-        <Button Visibility="{Binding Command3Show}" Content="{Binding Command3Text}" Command="{Binding Command3}" HorizontalAlignment="Left" Margin="170,10,0,0" VerticalAlignment="Top" Width="75" Height="25"/>
-        <Button Visibility="{Binding Command4Show}" Content="{Binding Command4Text}" Command="{Binding Command4}" HorizontalAlignment="Left" Margin="250,10,0,0" VerticalAlignment="Top" Width="75" Height="25"/>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+        </Grid.ColumnDefinitions>
+        <Button Visibility="{Binding Command1Show}" Content="{Binding Command1Text}" Command="{Binding Command1}" Grid.Column="0" Margin="10"/>
+        <Button Visibility="{Binding Command2Show}" Content="{Binding Command2Text}" Command="{Binding Command2}" Grid.Column="1" Margin="10"/>
+        <Button Visibility="{Binding Command3Show}" Content="{Binding Command3Text}" Command="{Binding Command3}" Grid.Column="2" Margin="10"/>
+        <Button Visibility="{Binding Command4Show}" Content="{Binding Command4Text}" Command="{Binding Command4}" Grid.Column="3" Margin="10"/>
 
     </Grid>
 </UserControl>
