--- a/Auftragsmanagement-System/Views/Artikelverwaltung/View/ArtikelverwaltungView.xaml
+++ b/Auftragsmanagement-System/Views/Artikelverwaltung/View/ArtikelverwaltungView.xaml
@@ -3,25 +3,46 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             mc:Ignorable="d" Width="612" Height="353">
-    <Grid Height="335" Margin="46,9,12,9">
-        <DataGrid IsReadOnly="True" AutoGenerateColumns="False" Height="266" HorizontalAlignment="Left" Margin="20,30,0,0" Name="dataGrid1" VerticalAlignment="Top" Width="304" ItemsSource="{Binding Articles}" />
+             mc:Ignorable="d"
+             d:DesignHeight="400" d:DesignWidth="750">
+    <Grid Margin="0">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="17*"></ColumnDefinition>
+            <ColumnDefinition Width="350"></ColumnDefinition>
+        </Grid.ColumnDefinitions>
+        <Grid Grid.Column="1" Margin="10">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="100"></ColumnDefinition>
+                <ColumnDefinition></ColumnDefinition>
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="35"/>
+                <RowDefinition Height="35"/>
+                <RowDefinition Height="35"/>
+                <RowDefinition Height="35"/>
+                <RowDefinition Height="35"/>
+                <RowDefinition Height="35"/>
+            </Grid.RowDefinitions>
+            <TextBox Text="{Binding SelectedArticle.ArticleNumber}" Margin="5" Grid.Column="1" Grid.Row="0" />
+            <Label Margin="3" Content="Artikelnummer" Grid.Row="0" />
+
+            <TextBox Text="{Binding SelectedArticle.Price}" Margin="5" Grid.Column="1" Grid.Row="1" />
+            <Label Content="Preis"  Margin="3" Grid.Column="0" Grid.Row="1"  />
+
+            <TextBox Text="{Binding SelectedArticle.Name}" Margin="5" Grid.Column="1" Grid.Row="2"/>
+            <Label Content="Name"  Margin="3" Grid.Column="0" Grid.Row="2"  />
+
+            <TextBox Text="{Binding SelectedArticle.ValidTo}" Margin="5" Grid.Column="1" Grid.Row="3" />
+            <Label Content="Gültig bis"  Margin="3" Grid.Column="0" Grid.Row="3"  />
+
+            <TextBox Text="{Binding SelectedArticle.Description}" Margin="5" Grid.Column="1" Grid.Row="4" />
+            <Label Content="Beschreibung"  Margin="3" Grid.Column="0" Grid.Row="4"  />
+
+            <TextBox Text="{Binding SelectedArticle.ValidFrom}" Margin="5" Grid.Column="1" Grid.Row="5" />
+            <Label Content="Gültig von"  Margin="3" Grid.Column="0" Grid.Row="5"  />
+        </Grid>
+        <DataGrid IsReadOnly="True" AutoGenerateColumns="True" Margin="10" SelectedItem="{Binding SelectedArticle}" ItemsSource="{Binding Articles}" Grid.Column="0" />
         
-        <TextBox Text="{Binding SelectedArticle.ArticleNumber}" Height="19" HorizontalAlignment="Left" Margin="339,48,0,0" Name="textBox1" VerticalAlignment="Top" Width="201" />
-        <Label Content="Artikelnummer" Height="28" HorizontalAlignment="Left" Margin="334,25,0,0" Name="Emp_EmployeeNumber" VerticalAlignment="Top" />
         
-        <TextBox Text="{Binding SelectedArticle.Price}" Height="19" HorizontalAlignment="Left" Margin="445,101,0,0" Name="textBox2" VerticalAlignment="Top" Width="95" />
-        <Label Content="Preis" Height="28" HorizontalAlignment="Left" Margin="442,78,0,0" Name="Emp_Title" VerticalAlignment="Top" RenderTransformOrigin="0.457,0.214" />
-
-        <TextBox Height="19" Text="{Binding SelectedArticle.Name}" HorizontalAlignment="Left" Margin="339,101,0,0" Name="textBox3" VerticalAlignment="Top" Width="95" />
-        <Label Content="Name" Height="28" HorizontalAlignment="Left" Margin="334,78,0,0" Name="Emp_Lastname" VerticalAlignment="Top" RenderTransformOrigin="0.357,0.321" />
-
-        <TextBox Text="{Binding SelectedArticle.ValidTo}" Height="19" HorizontalAlignment="Left" Margin="445,275,0,0" Name="textBox4" VerticalAlignment="Top" Width="95" />
-        <Label Content="Gültig bis" Height="28" HorizontalAlignment="Left" Margin="442,252,0,0" Name="Emp_Firstname" VerticalAlignment="Top" />
-
-        <TextBox Text="{Binding SelectedArticle.Description}" Height="91" HorizontalAlignment="Left" Margin="339,160,0,0" Name="textBox5" VerticalAlignment="Top" Width="203" />
-        <Label Content="Beschreibung" Height="28" HorizontalAlignment="Left" Margin="334,137,0,0" Name="Emp_Area" VerticalAlignment="Top" />
-        <TextBox Text="{Binding SelectedArticle.ValidFrom}" Height="19" HorizontalAlignment="Left" Margin="339,275,0,0" x:Name="textBox9" VerticalAlignment="Top" Width="95" />
-        <Label Content="Gültig von" Height="28" HorizontalAlignment="Left" Margin="334,252,0,0" x:Name="Adr_Street" VerticalAlignment="Top" />
     </Grid>
 </UserControl>
