--- a/Auftragsmanagement-System/Views/ActionBar/View/ActionBarView.xaml
+++ b/Auftragsmanagement-System/Views/ActionBar/View/ActionBarView.xaml
@@ -10,11 +10,13 @@
             <ColumnDefinition/>
             <ColumnDefinition/>
             <ColumnDefinition/>
+            <ColumnDefinition/>
         </Grid.ColumnDefinitions>
         <Button Visibility="{Binding Command1Show}" Content="{Binding Command1Text}" Command="{Binding Command1}" Grid.Column="0" Margin="10"/>
         <Button Visibility="{Binding Command2Show}" Content="{Binding Command2Text}" Command="{Binding Command2}" Grid.Column="1" Margin="10"/>
         <Button Visibility="{Binding Command3Show}" Content="{Binding Command3Text}" Command="{Binding Command3}" Grid.Column="2" Margin="10"/>
         <Button Visibility="{Binding Command4Show}" Content="{Binding Command4Text}" Command="{Binding Command4}" Grid.Column="3" Margin="10"/>
+        <Button Visibility="{Binding Command5Show}" Content="{Binding Command5Text}" Command="{Binding Command5}" Grid.Column="4" Margin="10"/>
 
     </Grid>
 </UserControl>
